--- a/bin/BUILD.bazel
+++ b/bin/BUILD.bazel
@@ -4,7 +4,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("//bzl:rules.bzl",
      "boot_archive",
-     "baseline_module",
+     "compiler_module",
      "boot_compiler"
 )
 
