--- a/dev/bin/BUILD.bazel
+++ b/dev/bin/BUILD.bazel
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("//bzl:rules.bzl",
      "boot_archive",
-     "baseline_module",
+     "compiler_module",
      "boot_compiler",
      "compiler"
 )
