--- a/middle_end/closure/BUILD.bazel
+++ b/middle_end/closure/BUILD.bazel
@@ -1,7 +1,7 @@
 load("//bzl:rules.bzl",
      "boot_library",
-     "baseline_module",
-     "baseline_signature",
+     "compiler_module",
+     "compiler_signature",
 )
 
 load("//config:CONFIG.bzl",
@@ -24,7 +24,7 @@ boot_library(
     ],
 )
 
-baseline_module(
+compiler_module(
     name   = "Closure",
     struct = "closure.ml",
     sig    = "Closure_cmi",
@@ -62,7 +62,7 @@ baseline_module(
     visibility = ["//middle_end:__pkg__"]
 )
 
-baseline_signature(
+compiler_signature(
     name = "Closure_cmi",
     src  = "closure.mli",
     opts = SIG_OPTS,
@@ -73,7 +73,7 @@ baseline_signature(
     ]
 )
 
-baseline_module(
+compiler_module(
     name   = "Closure_middle_end",
     struct = "closure_middle_end.ml",
     sig    = "Closure_middle_end_cmi",
@@ -96,7 +96,7 @@ baseline_module(
     ]
 )
 
-baseline_signature(
+compiler_signature(
     name = "Closure_middle_end_cmi",
     src  = "closure_middle_end.mli",
     opts = SIG_OPTS,
