--- a/runtime/BUILD.bazel
+++ b/runtime/BUILD.bazel
@@ -4,9 +4,7 @@ load("@bazel_skylib//rules:common_settings.bzl",
 
 ## NB: config flags a settings, e.g. --//runtime:dbg, at bottom of file
 
-load("//bzl:rules.bzl",
-     "boot_executable",
-     "baseline_module")
+load("//bzl:rules.bzl", "boot_executable")
 
 exports_files(["gen_primitives.sh"] + glob(["*.c"]))
 
